# moving-mass-control

./: .gitignore  .gitmodules  README.md
m2sat/: CITATION.cff  CMakeLists.txt  EulerFromDCM.m  README.md  gains.json  plot_log.asv  plot_log.m  send_log.sh  telemetry.py  test_receiver.py
m2sat/controllers/: CMakeLists.txt
m2sat/controllers/include/: controller.h  kalman.h
m2sat/controllers/src/: controller.cpp  kalman.cpp
m2sat/include/: ClockManager.h  imu.h  log.h  motor_mapping.h  telemetry.h  telemetry_conversion.h  tic.h
m2sat/logs/: 0220__13_35.csv  0221__15_57.csv  0221__15_59.csv  0221__16_05.csv  0221__16_08.csv  0224__13_36.csv  0224__13_38.csv  0224__13_39.csv  0224__13_52.csv  0224__13_53.csv  0224__13_54.csv  0317__13_03.csv  0317__14_18.csv  0317__14_35.csv  0317__14_39.csv  0317__14_44.csv  0317__14_47.csv  0318__10_28.csv  0318__10_37.csv  0318__10_54.csv  0318__10_57.csv  0318__12_16.csv  0318__13_02.csv  0318__15_21.csv  0318__16_01.csv  0318__16_03.csv  0318__16_18.csv  0318__16_38.csv  0324__16_56.csv  0331__10_52.csv  0331__11_02.csv  0331__11_33.csv  0331__11_40.csv  0331__11_45.csv  0331__11_47.csv  0331__11_52.csv  0331__12_05.csv  0331__12_08.csv  0331__12_13.csv  0331__12_14.csv  (+158 more)
m2sat/matlab/: QuatToDCM.m  QuatToDCM_single.m  quat_conj.m  quat_mult.m
m2sat/proto/: telemetry.proto
m2sat/src/: imu.cpp  log.cpp  main.cpp  motor_mapping.cpp  tic.cpp
m2sat/tare_imu/: main.cpp
m2sat/vnproglib/cpp/: CMakeLists.txt
m2sat/vnproglib/cpp/examples/ez_async_data/: main.cpp
m2sat/vnproglib/cpp/examples/getting_started/: main.cpp
m2sat/vnproglib/cpp/src/: sensors.cpp
m2sat/vnproglib/python/libvncxx/include/vn/: types.h
matlab/: imu_rotation_test.m  todo.m
matlab/concurrent_learning/: concurrent_learning.asv  mrac_dynamics.asv
matlab/concurrent_learning/cases/cyclic_case/: concurrent_learning.m  mrac_dynamics.m
matlab/concurrent_learning/direct_concurrent_learning_for_linear_mrac/: Runge_Kutta_4.m  concurrent_learning.asv  concurrent_learning.m  mrac_dynamics.asv  mrac_dynamics.m
matlab/concurrent_learning/estimation/: fixed_point_smoother_1d.m  fixed_point_smoother_3d.asv  fixed_point_smoother_3d.m  fps.m  particle_filter.m  particle_filter_real_time.m  pf_rotational.m  position_labeled.eps  velocity_labeled.eps
matlab/concurrent_learning/estimation/TVDiff/: demo_small.m  simulation.mat  simulation_test.m
matlab/concurrent_learning/estimation/smoother_plots/: gain_convergence.eps  position.eps  state_1.eps  state_2.eps  velocity.eps
matlab/concurrent_learning/simple_spacecraft_CL/: CalcMRP_Matrix.m  CalcMRPdynamics.m  KnownInvariantJ_concurrentMain.m  knownInvariantJ_concurrentDynamics.asv  knownInvariantJ_concurrentDynamics.m  skew.m  test_kron.m
matlab/concurrent_learning/simple_spacecraft_CL/eps/: BodyRatesrads.eps  ControlsignalNm.eps  Error.eps  ModifiedRodriguesParameters.eps  UncertaintyEstimations.eps
matlab/concurrent_learning/spacecraft_CL_with_uncertaint_J/: CalcMRP_Matrix.m  KnownInvariantJ_concurrentMain.asv  UncertaintInvariantJ_concurrentMain.asv  knownInvariantJ_concurrentDynamics.asv  uncertainInvariantJ_concurrentDynamics.m
matlab/dynamics_systems/: midterm.m
matlab/matt/: MassBalancingSection1c.m
matlab/pol/: CL_MBS_Simulation_RK4_2025.asv  CL_MBS_Simulation_RK4_2025.m  MBS_Simulation_RK4_2025.m  plot_results.m  rts_fixed_point_smoother.m  smoother_2.m  spacecraft_ekf_smoother.m
matlab/pol/Functions/: mbs1.m  mbs2.m  mbs3.m  mbs4.m  mbs_ode.m  mbs_ode_w_lfl.m  quat2rotmat.m  rk4_singlestep.m  vector_quat_x.m  vector_x.m
matlab/pol/Functions/DualQuaternionFunctions/: AttitudeQFromRandV.m  AttitudeQuaternions2LinearizedEuler.m  BodyFramerotationalmatrixFromRandV.m  DCM2quat_LVLH.m  DFDynamicsKepler.m  DF_DYN_DQ.m  DQFilipeKalmanFilterOriginal.m  DQLoperator.m  DQcircleproduct.m  DQconj.m  DQcross.m  DQgravitationalforce.m  DQgravitygradienttorque.m  DQj2perturbation.m  DQmult.m  (+40 more)
papers/concurrent_learning/estimation/: TVDiff.tar
